[workspace]
members = [
    "apis/c/node",
    "apis/c/operator",
    "apis/c++/node",
    "apis/c++/operator",
    "apis/python/cli",
    "apis/python/node",
    "apis/python/operator",
    "apis/rust/node",
    "apis/rust/operator",
    "apis/rust/operator/macros",
    "apis/rust/operator/types",
    "binaries/cli",
    "binaries/coordinator",
    "binaries/daemon",
    "binaries/runtime-api",
    "binaries/runtime-shared-lib",
    "binaries/runtime-python",
    "binaries/mavlink2-bridge-node",
    "binaries/ros2-bridge-node",
    "examples/rust-dataflow/node",
    "examples/rust-dataflow/status-node",
    "examples/rust-dataflow/sink",
    "examples/rust-dataflow/sink-dynamic",
    "examples/rust-dynamic-add-remove/sender",
    "examples/rust-dynamic-add-remove/receiver",
    "examples/rust-dynamic-add-remove/filter",
    "examples/ros2-bridge/rust/rust-ros2-example-node",
    "examples/ros2-bridge/yaml-bridge-service/requester-node",
    "examples/ros2-bridge/yaml-bridge-service/handler-node",
    "examples/ros2-bridge/yaml-bridge-action/goal-node",
    "examples/ros2-bridge/yaml-bridge-action-server/handler-node",
    "examples/benchmark/node",
    "examples/benchmark/sink",
    "examples/service-example/client",
    "examples/service-example/server",
    "examples/action-example/client",
    "examples/action-example/server",
    "examples/multiple-daemons/node",
    "examples/multiple-daemons/operator",
    "examples/multiple-daemons/sink",
    "examples/cpu-affinity-probe",
    "examples/log-sink-tcp",
    "examples/log-sink-file",
    "examples/log-sink-alert",
    "examples/cross-language/rust-sender",
    "examples/cross-language/rust-receiver",
    "examples/validated-pipeline/source",
    "examples/validated-pipeline/transform",
    "examples/validated-pipeline/sink",
    "examples/error-propagation/producer",
    "examples/error-propagation/consumer",
    "examples/mavlink2-bridge/heartbeat-emitter",
    "examples/mavlink2-bridge/mavlink-sim",
    "examples/mavlink2-bridge/telemetry-printer-rust",
    "libraries/arrow-convert",
    "libraries/log-utils",
    "libraries/coordinator-store",
    "libraries/core",
    "libraries/hub-client",
    "libraries/message",
    "libraries/recording",
    "binaries/replay-node",
    "binaries/record-node",
    "libraries/extensions/download",
    "libraries/extensions/telemetry/*",
    "libraries/extensions/mavlink2-bridge",
    "libraries/extensions/memory-pool",
    "libraries/extensions/ros2-bridge",
    "libraries/extensions/ros2-bridge/msg-gen",
    "libraries/extensions/ros2-bridge/python",
    "libraries/extensions/ros2-bridge/arrow",
    "tests/queue_size_latest_data_rust/receive_data",
    "tests/fault_tolerance/always_crash_node",
    "tests/fault_tolerance/clean_exit_node",
    "tests/fault_tolerance/delayed_crash_node",
    "tests/fault_tolerance/emit_then_exit_source_node",
    "tests/fault_tolerance/event_log_observer_node",
    "tests/fault_tolerance/fire_and_forget_source_node",
    "tests/fault_tolerance/hang_after_init_node",
    "tests/fault_tolerance/input_closed_observer_node",
    "tests/fault_tolerance/reconnect_survivor_node",
    "tests/fault_tolerance/silent_source_node",
    "tests/fault_tolerance/timed_burst_source_node",
    "xtask",
]

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
# Python packages derive version from CARGO_PKG_VERSION automatically.
version = "1.0.0-rc.2"
description = "`dora` goal is to be a low latency, composable, and distributed data flow."
documentation = "https://dora-rs.ai"
readme = "./README.md"
license = "Apache-2.0"
repository = "https://github.com/dora-rs/dora/"

[workspace.dependencies]
dora-node-api = { version = "1.0.0-rc.2", path = "apis/rust/node", default-features = false }
dora-node-api-python = { version = "1.0.0-rc.2", path = "apis/python/node", default-features = false }
dora-operator-api = { version = "1.0.0-rc.2", path = "apis/rust/operator", default-features = false }
dora-operator-api-macros = { version = "1.0.0-rc.2", path = "apis/rust/operator/macros" }
dora-operator-api-types = { version = "1.0.0-rc.2", path = "apis/rust/operator/types" }
dora-operator-api-python = { version = "1.0.0-rc.2", path = "apis/python/operator" }
dora-operator-api-c = { version = "1.0.0-rc.2", path = "apis/c/operator" }
dora-node-api-c = { version = "1.0.0-rc.2", path = "apis/c/node" }
dora-core = { version = "1.0.0-rc.2", path = "libraries/core" }
dora-hub-client = { version = "1.0.0-rc.2", path = "libraries/hub-client" }
dora-recording = { version = "1.0.0-rc.2", path = "libraries/recording" }
dora-arrow-convert = { version = "1.0.0-rc.2", path = "libraries/arrow-convert" }
dora-tracing = { version = "1.0.0-rc.2", path = "libraries/extensions/telemetry/tracing" }
dora-metrics = { version = "1.0.0-rc.2", path = "libraries/extensions/telemetry/metrics" }
dora-download = { version = "1.0.0-rc.2", path = "libraries/extensions/download" }
dora-log-utils = { version = "1.0.0-rc.2", path = "libraries/log-utils" }
dora-coordinator-store = { version = "1.0.0-rc.2", path = "libraries/coordinator-store" }
dora-cli = { version = "1.0.0-rc.2", path = "binaries/cli" }
dora-runtime-api = { version = "1.0.0-rc.2", path = "binaries/runtime-api" }
dora-runtime-shared-lib = { version = "1.0.0-rc.2", path = "binaries/runtime-shared-lib" }
dora-runtime-python = { version = "1.0.0-rc.2", path = "binaries/runtime-python" }
dora-daemon = { version = "1.0.0-rc.2", path = "binaries/daemon" }
dora-coordinator = { version = "1.0.0-rc.2", path = "binaries/coordinator" }
dora-ros2-bridge = { version = "1.0.0-rc.2", path = "libraries/extensions/ros2-bridge" }
dora-ros2-bridge-msg-gen = { version = "1.0.0-rc.2", path = "libraries/extensions/ros2-bridge/msg-gen" }
dora-ros2-bridge-python = { path = "libraries/extensions/ros2-bridge/python" }
dora-mavlink2-bridge = { version = "1.0.0-rc.2", path = "libraries/extensions/mavlink2-bridge" }
dora-memory-pool = { version = "1.0.0-rc.2", path = "libraries/extensions/memory-pool" }
dora-message = { version = "1.0.0-rc.2", path = "libraries/message" }
arrow = { version = "59", default-features = false }
arrow-schema = { version = "59" }
arrow-data = { version = "59" }
arrow-array = { version = "59" }
arrow-json = { version = "59" }
parquet = { version = "59" }
# pyo3 0.29 is blocked by `arrow-pyarrow` 59, which requires pyo3 ^0.28
# (only one `pyo3-ffi` may link against `python`).
pyo3 = { version = "0.28", features = [
    "eyre",
    "abi3-py311",
    "multiple-pymethods",
] }
pythonize = "0.28"
pyo3-build-config = { version = "0.28", features = ["resolve-config", "abi3-py311"] }
# git2 0.21 dropped `https`/`ssh` from its default features (0.20 had
# `default = ["ssh", "https"]`), so request them explicitly — otherwise
# libgit2 ships without a TLS transport ("no TLS stream available").
git2 = { version = "0.21", features = ["vendored-openssl", "https", "ssh"] }
serde_yaml = "0.9.34"
zenoh = { version = "~1.9", default-features = false, features = ["shared-memory", "unstable", "transport_tcp", "transport_udp", "transport_unixsock-stream"] }
# Advanced pub/sub (schema-cache subtopic): retain the last schema sample so a
# late-joining subscriber fetches it via a history query. `unstable` gates the
# AdvancedPublisher/AdvancedSubscriber API and forwards zenoh's `unstable`.
zenoh-ext = { version = "~1.9", default-features = false, features = ["unstable"] }
serde_json = "1.0.150"
semver = { version = "1.0.28", features = ["serde"] }
thiserror = "2.0"
colored = "3.1.1"
inquire = { version = "0.9.4", default-features = false }
tokio = { version = "1.52", default-features = false }
tokio-stream = "0.1.18"
eyre = "0.6.12"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.44"
uuid = { version = "1.23", features = ["serde", "v7"] }
futures = { version = "0.3.32", default-features = false, features = ["std", "async-await"] }
bincode = "1.3.3"
flume = "0.12.0"
tempfile = "3.27.0"
proptest = "1.11"
mavlink = { version = "0.18", default-features = false, features = ["std", "serde", "dialect-common", "transport-tcp", "transport-udp", "transport-direct-serial"] }
serialport = "4.9"
url = "2.5"

# Opt in per crate via `[lints] workspace = true`. `cfg(kani)` gates the
# formal-verification proof harnesses (`make qa-kani`,
# docs/formal-verification.md).
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

[package]
name = "dora-examples"
rust-version.workspace = true
version = "0.0.0"
edition.workspace = true
license = "Apache-2.0"
publish = false

[features]

[dev-dependencies]
eyre = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
dora-cli = { workspace = true }
dora-coordinator = { workspace = true }
dora-core = { workspace = true }
dora-daemon = { workspace = true }
dora-message = { workspace = true }
dora-tracing = { workspace = true }
dora-download = { workspace = true }
dunce = "1.0.5"
serde_yaml = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1.18"
tempfile = { workspace = true }
assert2 = "0.4.0"
tokio-tungstenite = "0.29"
libloading = "0.9"
dora-operator-api-types = { workspace = true }
arrow-array = { workspace = true }

[[example]]
name = "c-dataflow"
path = "examples/c-dataflow/run.rs"

[[example]]
name = "rust-dataflow"
path = "examples/rust-dataflow/run.rs"

[[example]]
name = "rust-dataflow-git"
path = "examples/rust-dataflow-git/run.rs"

# TODO: Fix example #192
[[example]]
name = "rust-dataflow-url"
path = "examples/rust-dataflow-url/run.rs"

[[example]]
name = "cxx-dataflow"
path = "examples/c++-dataflow/run.rs"

[[example]]
name = "cxx-arrow-dataflow"
path = "examples/c++-arrow-dataflow/run.rs"

[[example]]
name = "mavlink2-bridge-cxx"
path = "examples/mavlink2-bridge/run-cxx.rs"

[[example]]
name = "python-dataflow"
path = "examples/python-dataflow/run.rs"

[[example]]
name = "python-operator-dataflow"
path = "examples/python-operator-dataflow/run.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark/run.rs"

[[example]]
name = "multiple-daemons"
path = "examples/multiple-daemons/run.rs"

[[example]]
name = "cmake-dataflow"
path = "examples/cmake-dataflow/run.rs"

[[test]]
name = "cpp-operator-cxx-bridge"
path = "tests/cpp-operator-cxx-bridge.rs"

[[test]]
name = "ws-cli-e2e"
path = "tests/ws-cli-e2e.rs"

[[test]]
name = "example-smoke"
path = "tests/example-smoke.rs"

[[test]]
name = "hub-smoke"
path = "tests/hub-smoke.rs"

[[test]]
name = "finish-straggler-e2e"
path = "tests/finish-straggler-e2e.rs"

[profile.release]
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
