[package]
name = "dora-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-api = { version = "0.1.0", path = "../api" }
eyre = "0.6.8"
serde = { version = "1.0.136", features = ["derive"] }
