[package]
name = "dora-coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
dora-node-api = { path = "../api/node" }
eyre = "0.6.7"
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["io-util"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
clap = { version = "3.1.8", features = ["derive"] }
uuid = "0.8.2"
time = "0.3.9"
futures-concurrency = "2.0.3"
rand = "0.8.5"
dora-common = { version = "0.1.0", path = "../common" }
dora-rs = { path = "../.", features= ["metrics", "tracing"]}

opentelemetry = { git="https://github.com/open-telemetry/opentelemetry-rust", features = ["rt-tokio", "metrics"] }

opentelemetry-system-metrics = { git="https://github.com/haixuanTao/opentelemetry-rust-system-metrics" } 
capnp = "0.14.6"