[package]
name = "dora-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.16.1"
pyo3-asyncio = { version = "0.16", features = ["async-std-runtime"] }
zenoh = { git="https://github.com/eclipse-zenoh/zenoh.git" }
env_logger = "0.9.0"
pollster = "0.2.5"
async-std = { version = "1.10.0", default-features = false, features = [
	"attributes",
] }
futures = "0.3.12"

[lib]
name = "dora"
crate-type = ["cdylib"]