[package]
name = "dora-metrics"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
opentelemetry = { git = "https://github.com/open-telemetry/opentelemetry-rust", features = [
  "rt-tokio",
  "metrics",
] }
opentelemetry-otlp = { git = "https://github.com/open-telemetry/opentelemetry-rust", features = [
  "tonic",
  "metrics",
] }
opentelemetry-system-metrics = { git = "https://github.com/haixuanTao/opentelemetry-rust-system-metrics" }
tokio = { version = "1.17.0", features = ["full"] }
