[package]
name = "python_special_method_derive"
version.workspace = true
edition = "2021"

documentation.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
quote_into = "0.2.0"
pyo3.workspace = true

[lib]
proc-macro = true