[package]
name = "rcl-sys"
version = "0.1.0"
edition = "2021"
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]

description = "The C API binding of the ROS client library (rcl)"
repository = "https://github.com/rclrust/rclrust"
license = "Apache-2.0"

workspace = ".."

[features]
foxy = []
galactic = ["galactic+"]
rolling = ["galactic+"]
# internal fatures
"galactic+" = []
