[package]
name = "rclrust-msg-parser"
version = "0.0.1"
edition = "2018"
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]

description = "TODO"
repository = "https://github.com/rclrust/rclrust"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
nom = "6.1"
rclrust-msg-types = { path = "../rclrust-msg-types", version = "0.0.1" }
regex = "1"
thiserror = "1.0"
