[package]
name = "rclrust-msg"
version = "0.0.2"
edition = "2018"
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]

description = "TODO"
repository = "https://github.com/rclrust/rclrust"
license = "Apache-2.0"
readme = "../README.md"

categories = ["robotics"]
keywords = ["ros2"]

workspace = ".."

[dependencies]
array-init = "2.0"
rclrust-msg-gen = { path = "../rclrust-msg-gen", version = "0.0.2" }
widestring = "0.4"
