[package]
name = "rclrust-msg"
version = "0.0.2"
edition = "2018"
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]

description = "ROS2 message, service, action types"
repository = "https://github.com/rclrust/rclrust"
license = "Apache-2.0"

categories = ["science::robotics"]
keywords = ["ros2"]

workspace = ".."

[dependencies]
array-init = "2.0"
rclrust-msg-gen = { path = "../rclrust-msg-gen", version = "0.0.2" }
widestring = "0.4"
