[package]
name = "rclrust-msg"
version = "0.1.0"
edition = "2021"
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]

description = "ROS2 message, service, action types"
repository = "https://github.com/rclrust/rclrust"
license = "Apache-2.0"

categories = ["science::robotics"]
keywords = ["ros2"]

workspace = ".."

[dependencies]
array-init = "2.0"
rclrust-msg-gen = { path = "../rclrust-msg-gen", version = "0.1.0" }
widestring = "0.4"
