[package]
name = "rclrust"
version = "0.0.2"
edition = "2018"
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]

description = "ROS2 client written in Rust"
repository = "https://github.com/rclrust/rclrust"
license = "Apache-2.0"
readme = "../README.md"

keywords = ["ROS2"]
categories = ["science::robotics"]

workspace = ".."

[dependencies]
anyhow = "1.0"
futures = "0.3"
once_cell = "1.8"
parking_lot = "0.11"
rcl-sys = { path = "../rcl-sys", version = "0.0.2" }
rclrust-msg = { path = "../rclrust-msg", version = "0.0.2" }
thiserror = "1.0"
