[package]
name = "rclrust"
version = "0.1.0"
edition = "2018"
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]

description = "ROS2 client written in Rust"
repository = "https://github.com/rclrust/rclrust"
license = "Apache-2.0"
readme = "../README.md"

keywords = ["ROS2"]
categories = ["science::robotics"]

workspace = ".."

[dependencies]
anyhow = "1.0"
derive-new = "0.5"
futures = "0.3"
once_cell = "1.8"
parking_lot = "0.11"
rcl-sys = { path = "../rcl-sys", version = "0.1.0" }
rclrust-msg = { path = "../rclrust-msg", version = "0.1.0" }
thiserror = "1.0"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
