[package]
name = "ros2-client"
version = "0.5.2"
edition = "2018"
authors = ["Juhana Helovuo <juhana.helovuo@atostek.com>"]
description = "ROS2 client library based on RustDDS"
readme = "README.md"
keywords = ["network","protocol","dds","rtps"]
license = "Apache-2.0"
homepage = "https://atostek.com/en/products/rustdds/"  
repository = "https://github.com/jhelovuo/ros2-client/"
categories = ["network-programming", "science::robotics"] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rustdds = {  path = "../rustdds" }

mio = "^0.6.23"
mio-extras = "2.0.6"
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
cdr-encoding-size = { version="^0.5" }
lazy_static = "1.4.0"
uuid = { version = "1.3.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
futures = "0.3.28"
pin-utils = "0.1.0"
bytes = { version = "1.4.0", features = ["serde", "std"]}
chrono = { version = "0.4" } # actions need timestamps

[dev-dependencies]
log = "0.4"
termion = "1.5.5"
pretty_env_logger = "0.4.0"
# turle_teleop
log4rs = "1.2"
test-case = "1.2.0"
ctrlc = "3.1.6"

# async examples
smol = "1.3" 