[package]
name = "dora-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
dora-node-api = { path = "../api/node" }
dora-common = { version = "0.1.0", path = "../common" }
eyre = "0.6.8"
futures = "0.3.21"
futures-concurrency = "2.0.3"
libloading = "0.7.3"
serde_yaml = "0.8.23"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git" }
zenoh-config = { git = "https://github.com/eclipse-zenoh/zenoh.git" }
