[package]
name = "rustdds"
version = "0.8.3"
authors = ["Juhana Helovuo <juhana.helovuo@atostek.com>", "Oiva Moisio <oiva.moisio@atostek.com>", "Miska Melkinen <miska.melkinen@atostek.com>", "Lauri Eneh <lauri.eneh@atostek.com>"]
description = "Native Rust DDS implementation with RTPS"
readme = "README.md"
keywords = ["network","protocol","dds","rtps"]
license = "Apache-2.0"
edition = "2021"
homepage = "https://atostek.com/en/products/rustdds/"  
repository = "https://github.com/jhelovuo/RustDDS"
categories = ["network-programming", "science::robotics"] 
rust-version = "1.66.1"
# the science-robotics category is because of ROS2

[dependencies]
mio_06 = { package = "mio" , version ="^0.6.23" } 
mio-extras = "2.0.6"

mio_08 = { package = "mio" , version ="0.8.5", features = ["net"] } 
socketpair = "0.19"

bit-vec = "0.6.2"
speedy = "0.8.0"
log = "0.4.11"
num-traits = "0.2"
num-derive = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_repr="0.1"
byteorder = { version = "1.3", features = ["i128"] }
rand = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
enumflags2 = { version = "0.7.7", features = ["serde"] }
if-addrs = "0.10"
paste = "1"
md5 = "0.7.0"
socket2 = { version = "0.5", features = ["all"] }
bytes = "1"
static_assertions = "1.1"
thiserror = "1.0.29"
cdr-encoding-size = { version="^0.5" }
futures = "0.3"

[target.'cfg(windows)'.dependencies]
local-ip-address = "0.5.3"

[dev-dependencies]
serde_repr = {version = "0.1" }
log = "0.4"
log4rs = "1"
test-case = "3.1.0"
env_logger = "0.10"
test-log = "0.2"
hex-literal = "0.4"

# ros_visualizer
crossterm = "0.26"
tui = { version = "0.19", default-features = false, features = ['crossterm'] }

# shapes-demo
clap = "4.2"
ctrlc = "3.1.6"

[target.'cfg(unix)'.dev-dependencies]
# turle_teleop
termion = "2.0.1"

# async-shapes-demo
smol = "1.3"
